@@ -6,6 +6,7 @@ HEAD
 	DomainFilterCategories model, so we enable again the old
 	workaround to avoid this error
 	+ Add new information about saved bandwidth to the reports
+	+ Fixed bug in filter profile by object with network addresses
 1.3.14
 	+ Bugfix: in restartService we assure that all files are in place
 	before restarting the daemons
